--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,14 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.90.1",
     "axios": "^1.13.2",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "form-data": "^4.0.5",
     "helmet": "^8.1.0",
+    "multer": "^2.0.2",
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.12",
     "nodemon": "^3.1.11"
   }
 }
