--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,3 +15,21 @@ PINATA_JWT=your_pinata_jwt_token
 
 # Frontend Base URL (for email links)
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
+
+# Blockchain Configuration
+# The deployed contract address on Sepolia (or your chosen network)
+CONTRACT_ADDRESS=0xYourContractAddressHere
+
+# Private key of the wallet that will sign transactions (without 0x prefix)
+# IMPORTANT: Keep this secure! Never commit this to version control
+PRIVATE_KEY=your_private_key_here
+
+# RPC URL for connecting to Ethereum network
+# Examples:
+# - Infura: https://sepolia.infura.io/v3/YOUR_INFURA_API_KEY
+# - Alchemy: https://eth-sepolia.g.alchemy.com/v2/YOUR_ALCHEMY_API_KEY
+# - Public: https://rpc.sepolia.org
+BLOCKCHAIN_RPC_URL=https://eth-sepolia.g.alchemy.com/v2/YOUR_INFURA_API_KEY
+
+# Chain ID (11155111 for Sepolia, 1 for Ethereum Mainnet)
+CHAIN_ID=11155111
