improved bulk email send

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,7 +11,13 @@ ZOHO_EMAIL_USER=your_zoho_email@yourdomain.com
 ZOHO_EMAIL_PASS=your_zoho_app_password
 
 # Pinata IPFS Configuration
+# Option 1: JWT Token (legacy - for backward compatibility)
 PINATA_JWT=your_pinata_jwt_token
+
+# Option 2: API Key & Secret (recommended - used by Pinata SDK)
+# Get these from: https://app.pinata.cloud/developers/api-keys
+PINATA_API_KEY=your_pinata_api_key
+PINATA_SECRET_API_KEY=your_pinata_secret_api_key
 
 # Frontend Base URL (for email links)
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
