--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,8 @@
     "helmet": "^8.1.0",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.12",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "pdf-lib": "^1.17.1",
+    "sharp": "^0.33.5"
   }
 }
